Accomplish exercises selectors

--- a/2.Selectors/html/index.html
+++ b/2.Selectors/html/index.html
@@ -22,7 +22,7 @@
     <p id="p-with-an-id">This paragraph has an id</p>
 
     <div>
-      <p>This paragraph is inside a div and is followed by an important image<br /></p>
+      <p>This paragraph is inside a div and is followed by an important image</p><br>
       <figure>
         <img src="../assets/domtoretto.jpg" alt="Dominic Toretto" class="important" />
         <figcaption>Dominic Toretto, from Fast&Furious</figcaption>
