--- a/1.Introduction/intro-exo-1e-partie/index.html
+++ b/1.Introduction/intro-exo-1e-partie/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Alchemy for beginners</title>
 	<script type="text/javascript"></script>
-</head>
-<body>
+  </head>
+  <body>
 	<h1>Chapter 1: Equipment</h1>
-	<p>This is what an <em>alchemist's bottle</em> looks like:<br><img src="./a_bottle.jpg" alt="" title=""></p>
-</body>
+	<p>This is what an <em>alchemist's bottle</em> looks like:</p>
+	<img src="./img/a_bottle.jpg" alt="" title="">
+  </body>
 </html>
