Update html original (Le permier etait passé sous la traduction de Edge ^^'

--- a/4.Naviguer/index.html
+++ b/4.Naviguer/index.html
@@ -1,56 +1,56 @@
-<! DOCTYPE html>
-<HTML Lang="en">
-<tête>
-  <méta jeu de caractères="UTF-8">
-  <méta http-equiv="Compatible avec X-UA" contenu="IE=bord">
-  <méta nom="Fenêtre" contenu="width=largeur-périphérique, échelle-initiale=1.0">
-  <titre>Explorer le DOM</titre>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Exploring the DOM</title>
 
-  <lien Rel="Feuille de style" href=".. /actifs/style.css">
-  <script différer src="script.js"></script>
-</tête>
-<corps>
-  <en-tête>
-    <h1>Exploration du DOM BeCode | <fort>Naviguer</fort></h1>
-  </en-tête>
+  <link rel="stylesheet" href="../assets/style.css">
+  <script defer src="script.js"></script>
+</head>
+<body>
+  <header>
+    <h1>BeCode DOM exploration | <strong>Navigate</strong></h1>
+  </header>
 
-  <principal>
+  <main>
     <section>
-      <h2>La première section</h2>
+      <h2>The first section</h2>
 
       <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, nesciunt incidunt accusantium quaerat aliquid ullam distinctio, mollitia iure, id tempore repellat soluta officia quisquam rerum. Nesciunt explicabo adipisci maiores totam.
       </p>
 
       <p>
- Une liste de choses qui comptent
+        A list of things that matters
         <ol>
-          <Li>Dors bien</Li>
-          <Li>Bien manger</Li>
-          <Li>Prendre soin de soi</Li>
-          <Li>Apprendre à coder</Li>
-          <Li>La franchise de films Fast and Furious</Li>
+          <li>Sleep well</li>
+          <li>Eat well</li>
+          <li>Self care</li>
+          <li>Learning to code</li>
+          <li>The Fast and Furious film franchise</li>
         </ol>
       </p>
     </section>
 
     <section>
-      <h2>La troisième section</h2>
+      <h2>The third section</h2>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident dolorem explicabo in fugiat natus. Illum, cum exercitationem ? Earum doloribus esse velit expedita illo hic enim, sed voluptatem, omnis officia ipsam !</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident dolorem explicabo in fugiat natus. Illum, cum exercitationem? Earum doloribus esse velit expedita illo hic enim, sed voluptatem, omnis officia ipsam!</p>
     </section>
 
     <section>
-      <Div>
-        <h2>La deuxième section</h2>
+      <div>
+        <h2>The second section</h2>
 
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, dolor dolorem dolores eaque animi sint facere aperiam ducimus deleniti ! A doloribus quo iste animi inventore laborum amet ea cumque suscipit ?</p>
-      </Div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, dolor dolorem dolores eaque animi sint facere aperiam ducimus deleniti! A doloribus quo iste animi inventore laborum amet ea cumque suscipit?</p>
+      </div>
     </section>
-  </principal>
+  </main>
 
-  <pied de page>
- C’est le pied de page, vous devez le savoir déjà
-  </pied de page>
-</corps>
-</HTML>
+  <footer>
+    This is the footer, you should know that already
+  </footer>
+</body>
+</html>
